--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w & nodemon server/index.js"
+    "start": "webpack -w & nodemon server/index.js",
+    "postinstall": "npm run webpack"
   },
   "keywords": [
     "git",
@@ -15,6 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "apiai": "^4.0.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^2.6.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "morgan": "^1.8.2",
