--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w & nodemon server/index.js",
+    "start": "webpack",
+    "start-dev": "webpack -w & nodemon server/index.js",
     "postinstall": "webpack"
   },
   "repository": {
