chore: package.json update

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack",
+    "start": "node server/index.js",
     "start-dev": "webpack -w & nodemon server/index.js",
     "postinstall": "webpack"
   },
