--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a bot to help with git and github",
   "main": "server/index.js",
   "engines": {
-    "node": ">= 7.0.0"
+    "node": "7.10.0",
+    "npm": "4.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
