--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.1.1",
     "css-loader": "^0.28.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
