--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "a bot to help with git and github",
   "main": "server/index.js",
   "engines": {
-    "node": "7.10.0",
-    "npm": "4.2.0"
+    "node": "7.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm ls",
     "start": "node server/index.js",
     "start-dev": "webpack -w & nodemon server/index.js",
     "postinstall": "webpack"
@@ -55,5 +55,6 @@
     "babel-loader": "^7.0.0",
     "babel-preset-react": "^6.24.1",
     "webpack": "^2.6.1"
-  }
+  },
+  "bundleDependencies": ["node-pre-gyp"]
 }
