--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apiai": "^4.0.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
@@ -54,7 +55,17 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-watch": "^3.1.0",
     "webpack": "^2.6.1"
   },
-  "bundleDependencies": ["node-pre-gyp"]
+  "bundleDependencies": [
+    "node-pre-gyp"
+  ]
 }
