--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "octokat": "^0.9.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-markdown": "^2.5.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
