--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-sass": "^4.5.3",
     "octokat": "^0.9.0",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.5",
@@ -68,6 +69,7 @@
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-watch": "^3.1.0",
+    "nodemon": "^1.11.0",
     "webpack": "^2.6.1"
   },
   "bundleDependencies": [
